<resources>
    <string name="app_name">Recipe book</string>

    Activity создания нового рецепта
    <string name="new_group">Категория</string>
    <string name="new_name">Название блюда</string>
    <string name="new_recipe">Рецепт</string>
    <string name="new_description">Описание</string>
    <string name="new_ingredient">Ингредиенты</string>
    <string name="new_button">Создать</string>

    <string name="title_pizza1">Кабачковая пицца</string>
    <string name="title_pizza2">Пицца с колбасой и сыром</string>
    <string name="title_pizza3">Пицца на кефире</string>
    <string name="title_pizza4">Быстрая пицца</string>
    <string name="title_pizza5">Пицца с шампиньонами</string>

    Для start_activity
    <string name="group1">Завтрак</string>
    <string name="group2">Обед</string>
    <string name="group3">Ужин</string>
    <string name="group4">Салаты</string>
    <string name="group0">Error</string>

    Recipe activity
    <string name="edit_member">Edit member</string>
    <string name="delete_member">Delete member</string>

    <string name="description_pizza1">Попробуй летний вариант пиццы! Необычно, красиво и вкусно! Летом благодаря изобилию свежих овощей и фруктов ассортимент блюд расширяется. Появляется возможность приготовить что-то новое и необычное. Готовила кабачковую пиццу впервые и осталась результатом довольна. Выпечка сытная, сочная и очень вкусная.</string>
    <string name="description_pizza2">Пицца из дрожжевого теста с копченой колбасой и сыром. Рецепт легкий, пицца получается превосходной. Начинки довольно много, за счет помидоров пицца сочная, тонкое тесто под начинкой хорошо пропекается и остается мягким. Очень хороший рецепт как для большого застолья, так и для посиделок с друзьями. Такую пиццу можно приготовить в дорогу, она вкусна даже остывшая – хорошая альтернатива бутербродам.</string>
    <string name="description_pizza3">Пышное тесто, сочная начинка, сырная корочка. Традиционно пиццу готовят из теста на дрожжах. Но ситуации бывают разные, дрожжи не всегда присутствуют на наших кухонных полочках. Так что попробуем найти выход, если именно в такой момент захотелось отведать пиццу. Спойлер: будет вкусно!</string>
    <string name="description_pizza4">Чудо-рецепт вкусной пиццы на скорую руку! Получается как пиццерии, на тонкой основе. С начинкой можно поимпровизировать по своим предпочтениям. Такая пицца, как и любая другая, вкуснее в горячем виде. И хорошо, что ее всегда можно разогреть в микроволновке.</string>
    <string name="description_pizza5">Поклонники пиццы не пройдут мимо этой выпечки. Когда позволяет время, я стараюсь делать для пиццы домашнее тесто. В этот раз это дрожжевое. Оно получается мягкое и вкусное. А начинка - поле для фантазии и экспериментов. Вариант пиццы с грибами и колбасой, наверняка, тоже найдет своих поклонников.</string>

    <string name="recept1">Подготовьте все необходимые для пиццы ингредиенты. Потребуются два небольших помидора, половинка кабачка, манная крупа, крупные куриные яйца, ломтики сыра и ветчины.\n\nКабачок помойте, обсушите бумажными полотенцами. Молодые плоды очищать от кожицы не обязательно. Более старые, зрелые плоды очистите от кожицы, разрежьте и удалите семена. Натрите на крупной терке. Откиньте на сито. Поставьте на поддон. Слегка отожмите и вылейте выделившийся в поддон сок.\n\nПереложите кабачковую массу в миску подходящего размера. Добавьте яйца. Подсолите. Перемешайте до однородного состояния.\n\nИзмельчите помытую и обсушенную зелень. Можно взять укроп, петрушку и зеленый лук. Всыпьте манную крупу. Перемешайте массу.\n\nПросейте пшеничную муку вместе с разрыхлителем. Добавьте в овощную массу и перемешайте. Количество муки может быть больше или меньше. Все зависит от ее свойств. Поэтому просейте муки немного больше на тот случай если придется добавлять. Ориентируйтесь на желаемую консистенцию теста. Оно должно быть густым, как на оладьи. Отставьте миску с массой в сторону. Дайте время (около 10 минут), чтобы манка набухла.\n\nЛюбую жаропрочную форму (у меня сковорода диаметром 24 см) застелите промасленным пергаментом. Вылейте тесто, разровняйте ложкой поверхность. Сверху посыпьте любимыми приправами. Подойдут прованские травы, сушеный базилик.\n\nТонкими ломтиками нарежьте ветчину и разложите сверху на тесто.\n\nВозьмите плотные, мясистые помидоры. Такие плоды при нарезке и запекании не превратятся в кашу и пицца будет аккуратнее и красивее смотреться. Помойте томаты, обсушите. Разрежьте их на две части. Каждую половинку нарежьте тонкими ломтиками. Выложите сверху на ветчину.\n\nНа терке среднего или крупного размера натрите твердый сыр. Подойдет любой вкусный сыр, который при запекании будет хорошо плавиться. Заменить твердый сыр можно нерассольной моцарелллой.\n\n	Разогрейте (за 10 15 минут до начала готовки) духовку до 180 190 градусов. Выпекайте кабачковую пиццу около 20 минут. Время и температура выпекания может отличаться от указанного, так как духовые шкафы у каждого пекут по-разному. Учитывайте особенности вашей техники. Как проверить готовность? Если сверху образовалась румяная сырная корочка,а снизу тесто схватилось, стало золотистым, значит готово.\n\n	Достаньте форму с выпечкой из духовки. Дайте ей немного остыть. Так как кабачковая пицца очень нежная, разрезайте ее теплой прямо в форме. Затем переложите порционные кусочки на тарелки. Приятного аппетита!</string>
</resources>
