<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@android:color/black"/>

    <EditText
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:hint="@string/new_name"/>

    <EditText
        android:id="@+id/newIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:hint="@string/new_ingredient"/>

    <EditText
        android:id="@+id/newRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:hint="@string/new_recipe"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            android:textSize="20sp"
            android:layout_marginEnd="8dp"/>

        <Spinner
            android:id="@+id/groupSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonNewSave"
        android:onClick="saveRecipeClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/new_button"/>

</LinearLayout>